--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hi Everyone!</h1>
-<p>This is my web development project.</p>
+<h2>This is my web development project.</h2>
 </body>
 </html>
