--- a/index.html
+++ b/index.html
@@ -1,7 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Aaron Palmer's Web Development Project</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body>
-<h1>Hi Everyone!</h1>
-<h2>This is my web development project.</h2>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="topic1.html">About Me</a></li>
+                <li><a href="topic2.html">My Goals</a></li>
+                <li><a href="resources.html">References & Resources</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Welcome to My Web Development Project</h1>
+
+        <p>This website talks about me as well as my academic and professional goals. </p>
+
+        <h2>Topics</h2>
+        <ul>
+            <li><strong>About Me</strong> Who I Am</li>
+            <li><strong>My Academic Goals</strong> Academia</li>
+            <li><strong>My Professional Goals</strong> Work</li>
+        </ul>
+
+        <h2>Table of Contents:</h2>
+        <ol>
+            <li><a href="topic1.html">About Me: Get to Know Me! </a></li>
+            <li><a href="topic2.html">My Goals: Get to Know My Goals! </a></li>
+            <li><a href="resources.html">References & Resources</a></li>
+        </ol>
+
+        <img src="example.jpg" alt="Web Development Example" width="400">
+    </main>
+
+    <footer>
+        <p>&copy; 2025 My Web Development Project for KSU IT 3203 </p>
+    </footer>
 </body>
+
 </html>
