--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     </header>
 
     <main>
-        <h1>Welcome to My Web Development Project</h1>
+        <h1>Welcome to Aaron Palmer's Development Project</h1>
 
         <p>This website talks about me as well as my academic and professional goals. </p>
 
         <h2>Topics</h2>
         <ul>
-            <li><strong>About Me</strong> Who I Am</li>
-            <li><strong>My Academic Goals</strong> Academia</li>
-            <li><strong>My Professional Goals</strong> Work</li>
+            <li><strong>About Me</strong></li>
+            <li><strong>My Academic Goals</strong></li>
+            <li><strong>My Professional Goals</strong></li>
         </ul>
 
         <h2>Table of Contents:</h2>
@@ -43,7 +43,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 My Web Development Project for KSU IT 3203 </p>
+        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203 </p>
     </footer>
 </body>
 
