--- a/topic1.html
+++ b/topic1.html
@@ -20,8 +20,8 @@
     </header>
 
     <main>
-        <h1>Introduction to HTML</h1>
-        <p>HTML (HyperText Markup Language) structures web content.</p>
+        <h1>Get to Know Me!</h1>
+        <p>I’m Aaron Palmer, a passionate IT student working toward a degree in Information Technology.</p>
 
         <h2>Basic HTML Tags:</h2>
         <table border="1">
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 My Web Development Project for KSU IT 3203 </p>
+        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
     </footer>
 </body>
 
