--- a/topic2.html
+++ b/topic2.html
@@ -20,32 +20,29 @@
     </header>
 
     <main>
-        <h1>Introduction to HTML</h1>
-        <p>HTML (HyperText Markup Language) structures web content.</p>
+        <h1>Aaron Palmer's Goals</h1>
+        <p></p>
 
-        <h2>Basic HTML Tags:</h2>
-        <table border="1">
+        <h2>Professional & Academic Goals</h2>
+        <table>
             <tr>
-                <th>Tag</th>
-                <th>Description</th>
+                <th>Short-Term Goals</th>
+                <th>Long-Term Goals</th>
             </tr>
             <tr>
-                <td>&lt;h1&gt; to &lt;h6&gt;</td>
-                <td>Headings (from largest to smallest)</td>
+                <td>Earn CompTIA Network+ Certification</td>
+                <td>Work in Cybersecurity</td>
             </tr>
             <tr>
-                <td>&lt;p&gt;</td>
-                <td>Paragraph</td>
-            </tr>
-            <tr>
-                <td>&lt;a&gt;</td>
-                <td>Link</td>
+                <td>Finish My Bachelor's Degree</td>
+                <td>Lead IT Projects or Teams</td>
             </tr>
         </table>
+        
     </main>
 
     <footer>
-        <p>&copy; 2025 My Web Development Project for KSU IT 3203</p>
+        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
     </footer>
 </body>
 
