--- a/resources.html
+++ b/resources.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 My Web Development Project for KSU IT 3203</p>
+        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
     </footer>
 </body>
 
