--- a/resources.html
+++ b/resources.html
@@ -20,12 +20,25 @@
     </header>
 
     <main>
-        <h1>References & Learning Resources</h1>
+        <h1>References and Resources</h1>
+
+        <p>These resources were essential in helping me understand HTML, CSS, and web development best practices. I used them to guide the structure, styling, and deployment of my website.</p>
+        
         <ul>
-            <li><a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a></li>
-            <li><a href="https://www.w3schools.com/">W3Schools</a></li>
-            <li><a href="https://www.freecodecamp.org/">freeCodeCamp</a></li>
+            <li>
+                <a href="https://www.w3schools.com/" target="_blank">W3Schools</a> – Used for understanding HTML structure, CSS styling, and general web development tutorials.
+            </li>
+            <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank">MDN Web Docs (Mozilla)</a> – Consulted for detailed explanations of HTML elements, CSS properties, and best practices.
+            </li>
+            <li>
+                <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a> – Referred to for practical examples and beginner-friendly tutorials on HTML and CSS.
+            </li>
+            <li>
+                <a href="https://validator.w3.org/" target="_blank">W3C HTML Validator</a> – Used to validate and ensure my HTML code meets official web standards.
+            </li>
         </ul>
+        
     </main>
 
     <footer>
