--- a/topic1.html
+++ b/topic1.html
@@ -21,29 +21,39 @@
 
     <main>
         <h1>Get to Know Me!</h1>
-        <p>I’m Aaron Palmer, a passionate IT student working toward a degree in Information Technology.</p>
+        <h2>About Me</h2>
 
-        <h2>Basic HTML Tags:</h2>
         <table border="1">
-            <tr>
-                <th>Tag</th>
-                <th>Description</th>
-            </tr>
-            <tr>
-                <td>&lt;h1&gt; to &lt;h6&gt;</td>
-                <td>Headings (from largest to smallest)</td>
-            </tr>
-            <tr>
-                <td>&lt;p&gt;</td>
-                <td>Paragraph</td>
-            </tr>
-            <tr>
-                <td>&lt;a&gt;</td>
-                <td>Link</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Details</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Name</td>
+                    <td>Aaron Palmer</td>
+                </tr>
+                <tr>
+                    <td>Location</td>
+                    <td>Atlanta, GA</td>
+                </tr>
+                <tr>
+                    <td>Education</td>
+                    <td>Associate's Degree in Computer Science, Pursuing Bachelor's in Information Technology</td>
+                </tr>
+                <tr>
+                    <td>Career Goals</td>
+                    <td>Become an IT Systems Administrator and earn CompTIA Network+ Certification</td>
+                </tr>
+                <tr>
+                    <td>Interests</td>
+                    <td>Technology, Gaming, Lifting Weights, and Spending Time with My Dog</td>
+                </tr>
+            </tbody>
         </table>
-    </main>
-
+</main>
     <footer>
         <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
     </footer>
