--- a/topic2.html
+++ b/topic2.html
@@ -24,14 +24,15 @@
         <p></p>
 
         <h2>Professional & Academic Goals</h2>
-        <table>
+        <table> border="1">
             <tr>
                 <th>Short-Term Goals</th>
                 <th>Long-Term Goals</th>
             </tr>
             <tr>
-                <td>Earn CompTIA Network+ Certification</td>
-                <td>Work in Cybersecurity</td>
+                <td>Earn CompTIA Network+ 
+                    Certification </td>
+                <td> Work in Cybersecurity </td>
             </tr>
             <tr>
                 <td>Finish My Bachelor's Degree</td>
