--- a/topic2.html
+++ b/topic2.html
@@ -25,10 +25,12 @@
 
         <h2>Professional & Academic Goals</h2>
         <table> border="1">
+            <thead>
             <tr>
                 <th>Short-Term Goals</th>
                 <th>Long-Term Goals</th>
             </tr>
+        </thead>
             <tr>
                 <td>Earn CompTIA Network+ 
                     Certification </td>
