--- a/topic2.html
+++ b/topic2.html
@@ -24,7 +24,7 @@
         <p></p>
 
         <h2>Professional & Academic Goals</h2>
-        <table> border="1">
+        <table border="1">
             <thead>
             <tr>
                 <th>Short-Term Goals</th>
