--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="resources.html">References & Resources</a></li>
         </ol>
 
-        <img src="example.jpg" alt="Web Development Example" width="400">
+        <img src="example.jpg" alt="Jeff The Shark Says Hi" width="400">
     </main>
 
     <footer>
