--- a/index.html
+++ b/index.html
@@ -7,35 +7,39 @@
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
+<!-- Main Menu-->
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="topic1.html">About Me</a></li>
-                <li><a href="topic2.html">My Goals</a></li>
+                <li><a href="topic1.html">HTML5 Research</a></li>
+                <li><a href="topic2.html">SEO Research</a></li>
                 <li><a href="resources.html">References & Resources</a></li>
+                <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Welcome to Aaron Palmer's Development Project</h1>
+        <h1>Welcome to Aaron Palmer's Web Development Project</h1>
 
-        <p>This website talks about me as well as my academic and professional goals. </p>
-
-        <h2>Topics</h2>
+        <p>This website talks HTML5 and Search Engine Optimization aka SEO. This website is configured using Github. </p>
         <ul>
-            <li><strong>About Me</strong></li>
-            <li><strong>My Academic Goals</strong></li>
-            <li><strong>My Professional Goals</strong></li>
+            <li><strong><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">Here is the Github Repo for this site. </a></li>
+        </ul>
+
+        <h2>Topics Covered</h2>
+        <ul>
+            <li><strong>HTML5</strong></li>
+            <li><strong>Search Engine Optimization</strong></li>
+            <li><strong>References & Resources</strong></li>
         </ul>
 
         <h2>Table of Contents:</h2>
         <ol>
-            <li><a href="topic1.html">About Me: Get to Know Me! </a></li>
-            <li><a href="topic2.html">My Goals: Get to Know My Goals! </a></li>
+            <li><a href="topic1.html">HTML5 </a></li>
+            <li><a href="topic2.html">Search Engine Optimization </a></li>
             <li><a href="resources.html">References & Resources</a></li>
         </ol>
 
