--- a/resources.html
+++ b/resources.html
@@ -6,15 +6,16 @@
     <title>References & Resources</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
+<!-- Main Menu-->
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="topic1.html">About Me</a></li>
-                <li><a href="topic2.html">My Goals</a></li>
+                <li><a href="topic1.html">HTML5 Research</a></li>
+                <li><a href="topic2.html">SEO Research</a></li>
                 <li><a href="resources.html">References & Resources</a></li>
+                <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
             </ul>
         </nav>
     </header>
@@ -36,6 +37,12 @@
             </li>
             <li>
                 <a href="https://validator.w3.org/" target="_blank">W3C HTML Validator</a> – Used to validate and ensure my HTML code meets official web standards.
+            </li>
+            <li>
+                <a href="https://itwebtutorials.mga.edu/html/chp1/history.aspx" target="_blank">Internet History and Usage</a> – Referred to for content and chapter organization.
+                </li>
+            <li>
+                <a href="https://jackwestin.com/resources/mcat-content/perception" target="_blank">Jack Westin Perception</a> Referred to for CSS Styling
             </li>
         </ul>
         
