--- a/topic1.html
+++ b/topic1.html
@@ -3,56 +3,85 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About Me</title>
+    <title>HTML5 Research</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
+<!-- Main Menu-->
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="topic1.html">About Me</a></li>
-                <li><a href="topic2.html">My Goals</a></li>
+                <li><a href="topic1.html">HTML5 Research</a></li>
+                <li><a href="topic2.html">SEO Research</a></li>
                 <li><a href="resources.html">References & Resources</a></li>
+                <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Get to Know Me!</h1>
-        <h2>About Me</h2>
+ <!-- Content -->
+ <header>
+    <h1>HTML5: The Foundation of Modern Web Development</h1>
+</header>
 
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Category</th>
-                    <th>Details</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Name</td>
-                    <td>Aaron Palmer</td>
-                </tr>
-                <tr>
-                    <td>Location</td>
-                    <td>Atlanta, GA</td>
-                </tr>
-                <tr>
-                    <td>Education</td>
-                    <td>Associate's Degree in Computer Science, Pursuing Bachelor's in Information Technology</td>
-                </tr>
-                <tr>
-                    <td>Career Goals</td>
-                    <td>Become an IT Systems Administrator and earn CompTIA Network+ Certification</td>
-                </tr>
-                <tr>
-                    <td>Interests</td>
-                    <td>Technology, Gaming, Lifting Weights, and Spending Time with My Dog</td>
-                </tr>
-            </tbody>
-        </table>
+<section>
+    <h2>Introduction</h2>
+    <p>HTML5 is the latest version of HyperText Markup Language, offering new features for multimedia, accessibility, and web applications.</p>
+</section>
+
+<section>
+    <h2>History of HTML</h2>
+    <p>HTML was created by Tim Berners-Lee in 1991. Over time, it evolved from basic web formatting to the advanced capabilities in HTML5 today.</p>
+</section>
+
+<section>
+    <h2>Key Features of HTML5</h2>
+    <ul>
+        <li>Semantic Elements: `<article>`, `<section>`, and more.</li>
+        <li>Native Multimedia Support: `<audio>` and `<video>`.</li>
+        <li>Enhanced Forms: New input types like `email` and `date`.</li>
+        <li>Offline Capabilities: Local storage for better performance.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>HTML vs. HTML5 Features Comparison</h2>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Feature</th>
+                <th>HTML (Pre-HTML5)</th>
+                <th>HTML5</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Multimedia Support</td>
+                <td>Requires external plugins</td>
+                <td>Native audio and video</td>
+            </tr>
+            <tr>
+                <td>Semantic Markup</td>
+                <td>Limited, uses div tags</td>
+                <td>New semantic elements</td>
+            </tr>
+            <tr>
+                <td>Offline Access</td>
+                <td>Not supported</td>
+                <td>Local storage and caching</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
+
+<footer>
+    <p>Return to <a href="index.html">Home</a></p>
+</footer>
+
+</body>
+        <img src="html5.jpg" alt="html5 logo" width="400">
 </main>
     <footer>
         <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
