--- a/topic2.html
+++ b/topic2.html
@@ -3,50 +3,51 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>My Goals</title>
+    <title>SEO Research</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
+<!-- Main Menu-->
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="topic1.html">About Me</a></li>
-                <li><a href="topic2.html">My Goals</a></li>
+                <li><a href="topic1.html">HTML5 Research</a></li>
+                <li><a href="topic2.html">SEO Research</a></li>
                 <li><a href="resources.html">References & Resources</a></li>
+                <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">GitHub Repo</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Aaron Palmer's Goals</h1>
-        <p></p>
+<!-- Content -->
+<header>
+    <h1>Search Engine Optimization (SEO)</h1>
+</header>
 
-        <h2>Professional & Academic Goals</h2>
-        <table border="1">
-            <thead>
-            <tr>
-                <th>Short-Term Goals</th>
-                <th>Long-Term Goals</th>
-            </tr>
-        </thead>
-            <tr>
-                <td>Earn CompTIA Network+ 
-                    Certification </td>
-                <td> Work in Cybersecurity </td>
-            </tr>
-            <tr>
-                <td>Finish My Bachelor's Degree</td>
-                <td>Lead IT Projects or Teams</td>
-            </tr>
-        </table>
-        
-    </main>
+<section>
+    <h2>Introduction</h2>
+    <p>SEO involves optimizing web pages to rank higher in search engine results. It is crucial for increasing online visibility and driving organic traffic.</p>
+</section>
 
-    <footer>
-        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
-    </footer>
+<section>
+    <h2>Core Components of SEO</h2>
+    <ul>
+        <li><strong>On-Page SEO:</strong> Optimizing titles, meta descriptions, and content structure.</li>
+        <li><strong>Off-Page SEO:</strong> Building backlinks and promoting content.</li>
+        <li><strong>Technical SEO:</strong> Ensuring fast load times and mobile compatibility.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>SEO Best Practices</h2>
+    <p>Effective SEO involves using relevant keywords, optimizing content for user intent, and ensuring accessibility across devices.</p>
+</section>
+
+<footer>
+    <p>Return to <a href="index.html">Home</a></p>
+</footer>
 </body>
 
 </html>
