Added CSS validation logo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 
     <footer>
         <p>Aaron Palmer's 2025 Development Project for KSU IT 3203 </p>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
+                 alt="Valid CSS!" 
+                 style="border:0;width:88px;height:31px;">
+        </a>
+    
     </footer>
 </body>
 
