--- a/topic1.html
+++ b/topic1.html
@@ -78,6 +78,12 @@
 
 <footer>
     <p>Return to <a href="index.html">Home</a></p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+        <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
+             alt="Valid CSS!" 
+             style="border:0;width:88px;height:31px;">
+    </a>
+
 </footer>
 
 </body>
