--- a/topic1.html
+++ b/topic1.html
@@ -38,12 +38,12 @@
 
 <section>
     <h2>Key Features of HTML5</h2>
-    <ul>
-        <li>Semantic Elements: `<article>`, `<section>`, and more.</li>
-        <li>Native Multimedia Support: `<audio>` and `<video>`.</li>
-        <li>Enhanced Forms: New input types like `email` and `date`.</li>
-        <li>Offline Capabilities: Local storage for better performance.</li>
-    </ul>
+        <ul>
+            <li>Semantic Elements: &lt;article&gt;, &lt;section&gt;, and more.</li>
+            <li>Native Multimedia Support: &lt;audio&gt; and &lt;video&gt;.</li>
+            <li>Enhanced Forms: New input types like &lt;email&gt; and &lt;date&gt;.</li>
+            <li>Offline Capabilities: Local storage for better performance.</li>
+        </ul>
 </section>
 
 <section>
