--- a/resources.html
+++ b/resources.html
@@ -42,7 +42,7 @@
                 <a href="https://itwebtutorials.mga.edu/html/chp1/history.aspx" target="_blank">Internet History and Usage</a> – Referred to for content and chapter organization.
                 </li>
             <li>
-                <a href="https://jackwestin.com/resources/mcat-content/perception" target="_blank">Jack Westin Perception</a> Referred to for CSS Styling
+                <a href="https://jackwestin.com/resources/mcat-content/perception" target="_blank">Jack Westin Perception</a> – Referred to for CSS Styling
             </li>
         </ul>
         
