--- a/topic1.html
+++ b/topic1.html
@@ -28,6 +28,7 @@
 
 <section>
     <h2>Introduction</h2>
+    <img src="html5.jpg" alt="HTML5 Logo" class="topic-image">
     <p>HTML5 is the latest version of HyperText Markup Language, offering new features for multimedia, accessibility, and web applications.</p>
 </section>
 
@@ -72,7 +73,6 @@
                 <td>Not supported</td>
                 <td>Local storage and caching</td>
             </tr>
-            <img src="html5.jpg" alt="html5 logo" width="200">
         </tbody>
     </table>
 </section>
