--- a/topic1.html
+++ b/topic1.html
@@ -28,8 +28,10 @@
 
 <section>
     <h2>Introduction</h2>
-    <img src="html5.jpg" alt="HTML5 Logo" class="resize-image"/>
     <p>HTML5 is the latest version of HyperText Markup Language, offering new features for multimedia, accessibility, and web applications.</p>
+    <div class="image-container">
+        <img src="html5.jpg" alt="HTML5" class="resize-image" />
+    </div>
 </section>
 
 <section>
