--- a/topic2.html
+++ b/topic2.html
@@ -53,6 +53,9 @@
     </a>
 
 </footer>
+<footer>
+    <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
+</footer>
 </body>
 
 </html>
