trying to validate html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <p>This website talks HTML5 and Search Engine Optimization aka SEO. This website is configured using Github. </p>
         <ul>
-            <li><strong><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">Here is the Github Repo for this site. </a></li>
+            <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">Here is the Github Repo for this site.</li>
         </ul>
 
         <h2>Topics Covered</h2>
