fixed code in html for validator

--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Aaron Palmer's Web Development Project</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Metadata and Page Setup -->
+    <meta charset="UTF-8"> <!-- Character encoding for universal text compatibility -->
+    <title>Aaron Palmer's Web Development Project</title> <!-- Page title displayed in the browser tab -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file for styling -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive design for different screen sizes -->
 </head>
-<!-- Main Menu-->
+
 <body>
+    <!-- Main Navigation Menu -->
     <header>
         <nav>
             <ul>
+                <!-- Navigation links for internal and external pages -->
                 <li><a href="index.html">Home</a></li>
                 <li><a href="topic1.html">HTML5 Research</a></li>
                 <li><a href="topic2.html">SEO Research</a></li>
@@ -21,14 +24,21 @@
         </nav>
     </header>
 
+    <!-- Main Content Section -->
     <main>
         <h1>Welcome to Aaron Palmer's Web Development Project</h1>
 
-        <p>This website talks HTML5 and Search Engine Optimization aka SEO. This website is configured using Github. </p>
+        <!-- Introduction Paragraph -->
+        <p>This website discusses HTML5 and Search Engine Optimization (SEO). It is hosted using GitHub Pages.</p>
+
+        <!-- GitHub Repository Link -->
         <ul>
-            <li><a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">Here is the Github Repo for this site.</li>
+            <li>
+                <a href="https://github.com/ajpalmer22/ajpalmer22.github.io" target="_blank">Here is the GitHub Repo for this site.</a>
+            </li>
         </ul>
 
+        <!-- Topics Overview -->
         <h2>Topics Covered</h2>
         <ul>
             <li><strong>HTML5</strong></li>
@@ -36,24 +46,28 @@
             <li><strong>References & Resources</strong></li>
         </ul>
 
+        <!-- Table of Contents -->
         <h2>Table of Contents:</h2>
         <ol>
-            <li><a href="topic1.html">HTML5 </a></li>
-            <li><a href="topic2.html">Search Engine Optimization </a></li>
+            <li><a href="topic1.html">HTML5</a></li>
+            <li><a href="topic2.html">Search Engine Optimization</a></li>
             <li><a href="resources.html">References & Resources</a></li>
         </ol>
 
+        <!-- Example Image -->
         <img src="example.jpg" alt="Jeff The Shark Says Hi" width="400">
     </main>
 
+    <!-- Footer Section -->
     <footer>
-        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203 </p>
+        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
+
+        <!-- CSS Validation Badge -->
         <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
             <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
                  alt="Valid CSS!" 
                  style="border:0;width:88px;height:31px;">
         </a>
-    
     </footer>
 </body>
 
