--- a/topic1.html
+++ b/topic1.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+    <!-- Metadata and Page Setup -->
     <meta charset="UTF-8">
-    <title>HTML5 Research</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>HTML5 Research</title> <!-- Page title for this section -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external stylesheet -->
 </head>
-<!-- Main Menu-->
+
 <body>
+    <!-- Main Navigation Menu -->
     <header>
         <nav>
             <ul>
@@ -20,77 +22,79 @@
         </nav>
     </header>
 
+    <!-- Main Content Section -->
     <main>
- <!-- Content -->
- <header>
-    <h1>HTML5: The Foundation of Modern Web Development</h1>
-</header>
+        <h1>HTML5: The Foundation of Modern Web Development</h1>
 
-<section>
-    <h2>Introduction</h2>
-    <p>HTML5 is the latest version of HyperText Markup Language, offering new features for multimedia, accessibility, and web applications.</p>
-    <div class="image-container">
-        <img src="html5.jpg" alt="HTML5" class="resize-image" />
-    </div>
-</section>
+        <!-- Introduction Section -->
+        <section>
+            <h2>Introduction</h2>
+            <p>HTML5 is the latest version of HyperText Markup Language, offering new features for multimedia, accessibility, and web applications.</p>
+            <div class="image-container">
+                <img src="html5.jpg" alt="HTML5 Logo" class="resize-image">
+            </div>
+        </section>
 
-<section>
-    <h2>History of HTML</h2>
-    <p>HTML was created by Tim Berners-Lee in 1991. Over time, it evolved from basic web formatting to the advanced capabilities in HTML5 today.</p>
-</section>
+        <!-- History of HTML Section -->
+        <section>
+            <h2>History of HTML</h2>
+            <p>HTML was created by Tim Berners-Lee in 1991. Over time, it evolved from basic web formatting to the advanced capabilities in HTML5 today.</p>
+        </section>
 
-<section>
-    <h2>Key Features of HTML5</h2>
-        <ul>
-            <li>Semantic Elements: &lt;article&gt;, &lt;section&gt;, and more.</li>
-            <li>Native Multimedia Support: &lt;audio&gt; and &lt;video&gt;.</li>
-            <li>Enhanced Forms: New input types like &lt;email&gt; and &lt;date&gt;.</li>
-            <li>Offline Capabilities: Local storage for better performance.</li>
-        </ul>
-</section>
+        <!-- Key Features of HTML5 -->
+        <section>
+            <h2>Key Features of HTML5</h2>
+            <ul>
+                <li>Semantic Elements: &lt;article&gt;, &lt;section&gt;, etc.</li>
+                <li>Native Multimedia Support: &lt;audio&gt; and &lt;video&gt; elements.</li>
+                <li>Enhanced Forms: New input types like &lt;email&gt; and &lt;date&gt;.</li>
+                <li>Offline Capabilities: Local storage and caching.</li>
+            </ul>
+        </section>
 
-<section>
-    <h2>HTML vs. HTML5 Features Comparison</h2>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Feature</th>
-                <th>HTML (Pre-HTML5)</th>
-                <th>HTML5</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Multimedia Support</td>
-                <td>Requires external plugins</td>
-                <td>Native audio and video</td>
-            </tr>
-            <tr>
-                <td>Semantic Markup</td>
-                <td>Limited, uses div tags</td>
-                <td>New semantic elements</td>
-            </tr>
-            <tr>
-                <td>Offline Access</td>
-                <td>Not supported</td>
-                <td>Local storage and caching</td>
-            </tr>
-        </tbody>
-    </table>
-</section>
+        <!-- HTML vs. HTML5 Comparison Table -->
+        <section>
+            <h2>HTML vs. HTML5 Features Comparison</h2>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>Feature</th>
+                        <th>HTML (Pre-HTML5)</th>
+                        <th>HTML5</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Multimedia Support</td>
+                        <td>Requires external plugins</td>
+                        <td>Native audio and video</td>
+                    </tr>
+                    <tr>
+                        <td>Semantic Markup</td>
+                        <td>Limited, uses div tags</td>
+                        <td>New semantic elements</td>
+                    </tr>
+                    <tr>
+                        <td>Offline Access</td>
+                        <td>Not supported</td>
+                        <td>Local storage and caching</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
 
-<footer>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
-        <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
-             alt="Valid CSS!" 
-             style="border:0;width:88px;height:31px;">
-</footer>
-
-        
+    <!-- Footer Section -->
     <footer>
         <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
+
+        <!-- CSS Validation Badge -->
+        <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
+                 alt="Valid CSS!" 
+                 style="border:0;width:88px;height:31px;">
+        </a>
     </footer>
 </body>
-</main>
 
 </html>
