--- a/topic2.html
+++ b/topic2.html
@@ -2,15 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>SEO Research</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Metadata and Page Setup -->
+    <meta charset="UTF-8"> <!-- Character encoding to support special characters -->
+    <title>SEO Research</title> <!-- Page title displayed on the browser tab -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS for styling -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design on all devices -->
 </head>
-<!-- Main Menu-->
+
 <body>
+    <!-- Main Navigation Menu -->
     <header>
         <nav>
             <ul>
+                <!-- Navigation links for easy page access -->
                 <li><a href="index.html">Home</a></li>
                 <li><a href="topic1.html">HTML5 Research</a></li>
                 <li><a href="topic2.html">SEO Research</a></li>
@@ -20,43 +24,126 @@
         </nav>
     </header>
 
+    <!-- Main Content Section -->
     <main>
-<!-- Content -->
-<header>
-    <h1>Search Engine Optimization (SEO)</h1>
-</header>
+        <h1>Search Engine Optimization (SEO) Overview</h1>
 
-<section>
-    <h2>Introduction</h2>
-    <p>SEO involves optimizing web pages to rank higher in search engine results. It is crucial for increasing online visibility and driving organic traffic.</p>
-</section>
+        <!-- Introduction Section -->
+        <section>
+            <h2>What is SEO?</h2>
+            <p>Search Engine Optimization (SEO) refers to the practice of optimizing web content to improve its visibility and ranking on search engines like Google, Bing, and Yahoo.</p>
+            
+            <!-- Relevant Image -->
+            <div class="image-container">
+                <img src="seo.jpg" alt="SEO Process Illustration" class="resize-image">
+            </div>
+        </section>
 
-<section>
-    <h2>Core Components of SEO</h2>
-    <ul>
-        <li><strong>On-Page SEO:</strong> Optimizing titles, meta descriptions, and content structure.</li>
-        <li><strong>Off-Page SEO:</strong> Building backlinks and promoting content.</li>
-        <li><strong>Technical SEO:</strong> Ensuring fast load times and mobile compatibility.</li>
-    </ul>
-</section>
+        <!-- Importance of SEO -->
+        <section>
+            <h2>Why is SEO Important?</h2>
+            <p>SEO is crucial because it helps websites rank higher in search engine results, increasing organic traffic, improving brand visibility, and enhancing user experience.</p>
+            <ul>
+                <li>Increased Website Traffic: Higher rankings lead to more visitors.</li>
+                <li>Better User Experience: SEO emphasizes fast, accessible, and user-friendly websites.</li>
+                <li>Cost-Effective Marketing: Organic traffic is free compared to paid advertisements.</li>
+            </ul>
+        </section>
 
-<section>
-    <h2>SEO Best Practices</h2>
-    <p>Effective SEO involves using relevant keywords, optimizing content for user intent, and ensuring accessibility across devices.</p>
-</section>
+        <!-- Types of SEO -->
+        <section>
+            <h2>Types of SEO Strategies</h2>
 
-<footer>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
-        <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
-             alt="Valid CSS!" 
-             style="border:0;width:88px;height:31px;">
-    </a>
+            <!-- On-Page SEO -->
+            <h3>1. On-Page SEO</h3>
+            <p>On-page SEO refers to optimizing content and HTML source code directly on your website.</p>
+            <ul>
+                <li>Optimizing title tags, meta descriptions, and headings.</li>
+                <li>Improving content quality and keyword placement.</li>
+                <li>Ensuring proper internal linking structure.</li>
+            </ul>
 
-</footer>
-<footer>
-    <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
-</footer>
+            <!-- Off-Page SEO -->
+            <h3>2. Off-Page SEO</h3>
+            <p>Off-page SEO focuses on actions taken outside your website to improve search rankings.</p>
+            <ul>
+                <li>Building backlinks from reputable sources.</li>
+                <li>Engaging in social media marketing and online networking.</li>
+                <li>Guest posting on industry-related websites.</li>
+            </ul>
+
+            <!-- Technical SEO -->
+            <h3>3. Technical SEO</h3>
+            <p>Technical SEO involves optimizing the backend of a website to enhance crawling and indexing by search engines.</p>
+            <ul>
+                <li>Improving website speed and performance.</li>
+                <li>Ensuring mobile-friendliness and responsive design.</li>
+                <li>Implementing structured data and XML sitemaps.</li>
+            </ul>
+        </section>
+
+        <!-- SEO Best Practices -->
+        <section>
+            <h2>SEO Best Practices</h2>
+            <p>Implementing these best practices ensures better search engine rankings and an improved user experience:</p>
+            <ol>
+                <li>Use descriptive, keyword-rich URLs.</li>
+                <li>Optimize images with alt text and compression.</li>
+                <li>Ensure your website is mobile-friendly.</li>
+                <li>Create high-quality, engaging, and original content.</li>
+                <li>Regularly update and audit your website for errors.</li>
+            </ol>
+        </section>
+
+        <!-- SEO Tools -->
+        <section>
+            <h2>Popular SEO Tools</h2>
+            <p>Here are some widely used tools to analyze and enhance SEO performance:</p>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>Tool Name</th>
+                        <th>Purpose</th>
+                        <th>Website Link</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Google Analytics</td>
+                        <td>Track website traffic and user behavior.</td>
+                        <td><a href="https://analytics.google.com/" target="_blank">Google Analytics</a></td>
+                    </tr>
+                    <tr>
+                        <td>Google Search Console</td>
+                        <td>Monitor and resolve search-related issues.</td>
+                        <td><a href="https://search.google.com/search-console/" target="_blank">Search Console</a></td>
+                    </tr>
+                    <tr>
+                        <td>Ahrefs</td>
+                        <td>Analyze backlinks and competitive research.</td>
+                        <td><a href="https://ahrefs.com/" target="_blank">Ahrefs</a></td>
+                    </tr>
+                    <tr>
+                        <td>Yoast SEO</td>
+                        <td>Optimize on-page SEO for WordPress sites.</td>
+                        <td><a href="https://yoast.com/" target="_blank">Yoast SEO</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>Aaron Palmer's 2025 Development Project for KSU IT 3203</p>
+
+        <!-- CSS Validation Badge -->
+        <a href="https://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" 
+                 alt="Valid CSS!" 
+                 style="border:0;width:88px;height:31px;">
+        </a>
+    </footer>
 </body>
-</main>
 
 </html>
