--- a/resources.html
+++ b/resources.html
@@ -44,6 +44,12 @@
             <li>
                 <a href="https://jackwestin.com/resources/mcat-content/perception" target="_blank">Jack Westin Perception</a> – Referred to for CSS Styling
             </li>
+            <li>
+                <a href="https://www.geeksforgeeks.org/search-engine-optimization-seo-basics/" target="_blank">Search Engine Optimization</a> – Used to support SEO research and optimize SEO for website
+            </li>
+            <li>
+                <a href="https://www.w3docs.com/learn-html%20/audio-and-video-in-html5.html" target="_blank">HTML 5 Audio & Video</a> - Used to support HTML5 new tag research
+            </li>
         </ul>
         
     </main>
